:bulb: 【java.lang.module.Configuration】 模块图，包含当前已解析的所有模块的信息